@@ -78,6 +78,8 @@ DFHack future
                 replaces autoSyndrome
             reaction-trigger-transition.lua
                 a tool for converting mods from autoSyndrome to reaction-trigger
+            random-trigger.lua
+                triggers random scripts that you register
             skill-change.lua
                 for incrementing and setting skills
             spawn-flow.lua
